# login_project

./: .gitignore  README.md  docker-compose.yml  env_template  gen_env.sh  script.sh  ssl.conf
backend/: Dockerfile  pyproject.toml
backend/auth-service/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/auth-service/controller/: user_profile.py
backend/auth-service/lib/: Database.py  DatabaseFactory.py  Hash.py  Token.py  UserDatabase.py
backend/auth-service/model/: error.py  hash.py  user_database.py
backend/auth-service/router/: __init__.py  (+1 more)
backend/config/: config.py
backend/core/: error.py  token.py
backend/expense-service/: Dockerfile  main.py  pyproject.toml
backend/expense-service/controller/: transaction.py
backend/expense-service/lib/: Database.py  ExpenseDatabase.py  TransactionDatabase.py
backend/expense-service/model/: transaction_database.py
backend/expense-service/router/: __init__.py  transaction.py
backend/expense-service/test/: AllTest.py  ExpenseDatabaseTest.py  TransactionDatabaseTest.py  TransactionTest.py  test_all.py  transaction_database_test.py  transaction_test.py
backend/expense-service/util/: Transaction.py
backend/login_backend/: config.py  config_template.yaml  main.py
backend/system/: main.py
expense-reoport-service/: example.go  go.mod  main.go
expense-reoport-service/controllers/: expense.go
expense-reoport-service/module/: expense.go
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: style.css
mysql/: Dockerfile  init.sql  my.cnf.template
nginx/: nginx_template.conf
(+31 files in other folders)
