[tool.poetry]
package-mode = false
name = "expense-service"
version = "0.1.0"
description = ""
authors = ["junyanzhao <junyanzhao1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
